--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.7",
     "react-router-dom": "^6.3.0",
